# LDPC4QKD

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  start_all_sims.sh
.github/workflows/: ci-cmake_tests.yml
benchmarks/: CMakeLists.txt  code_simulation_helpers.hpp  main_benchmark_decoder.cpp  main_benchmark_encoder.cpp  main_benchmark_ra.cpp  main_frame_error_rate_simulation.cpp  main_rate_adapted_fer.cpp  main_rate_adapted_simulation.cpp
benchmarks_error_rate/: CMakeLists.txt  code_simulation_helpers.hpp  main_critical_rate_simulation.cpp  main_rate_adapted_fer.cpp
benchmarks_runtime/: CMakeLists.txt  main_benchmark_decoder.cpp  main_benchmark_encoder.cpp  main_benchmark_ra.cpp
cmake/Modules/: BuildConfig.cmake  CompilerWarnings.cmake
codes/: Manifest.toml  Project.toml  README.md  ldpc_codegen.jl  rateadaptive_codegen.jl  storage_utils_ldpc.jl
codes/aff3ct_fer_simulations/: aff3ct_output_alist_6f1747e.txt  aff3ct_output_alist_d839b0a.txt
codes/aff3ct_fer_simulations/raw_output/: aff3ct_output_alist_1fbeda6.txt  aff3ct_output_alist_54adc87.txt  aff3ct_output_alist_5bfa71c.txt  aff3ct_output_alist_dd32e13.txt  aff3ct_output_alist_f496399.txt
codes/ldpc/: block_1572864_proto_2x6_313422410401.qccsc.json  block_16384_proto_2x4_12131025.qccsc.json  block_24576_proto_2x6_313422410401.qccsc.json  block_4096_proto_2x4_12131025.qccsc.json  block_6144_proto_2x6_313422410401.qccsc.json  block_819200_pegqc.qccsc.json  lrate_0.15_block_819k.qccsc.json  lrate_0.1_block_819k.qccsc.json  lrate_0.25_block_819k.qccsc.json  lrate_0.2_block_819k.qccsc.json  lrate_0.35_block_819k.qccsc.json  lrate_0.3_block_819k.qccsc.json  lrate_0.45_block_819k.qccsc.json  lrate_0.4_block_819k.qccsc.json  lrate_0.5_block_819k.qccsc.json
codes/ldpc/rate_0.33/: block_1572864_proto_2x6_313422410401.cscmat  block_24576_proto_2x6_313422410401.cscmat  block_6144_proto_2x6_313422410401.cscmat
codes/ldpc/rate_0.5/: block_1048576_proto_2x4_12131025.cscmat  block_1048576_proto_2x4_12131025.qccsc.json  block_16384_proto_2x4_12131025.cscmat  block_4096_proto_2x4_12131025.cscmat
codes/ldpc/rate_adaption/: rate_adaption_2x4_block_1048576.csv  rate_adaption_2x4_block_16384.csv  rate_adaption_2x4_block_4096.csv  rate_adaption_2x6_block_1572864.csv  rate_adaption_2x6_block_24576.csv  rate_adaption_2x6_block_6144.csv
examples/: CMakeLists.txt  main_demo_error_correction.cpp
src/: .gitignore  CMakeLists.txt  autogen_ldpc_QC.hpp  autogen_ldpc_matrix_csc_example.hpp  autogen_rate_adaption_example.hpp  encoder.hpp  encoder_advanced.cpp  encoder_advanced.hpp  rate_adaptive_code.hpp  read_scsmat_format.hpp
src/LDPC4QKD/: autogen_ldpc_QC.hpp  encoder.hpp  encoder_advanced.hpp  rate_adaptive_code.hpp  read_ldpc_file_formats.hpp
src/LDPC4QKD/autogen/: all_819k_codes.qccsc.hpp  rate_adaption_2x4_block_1048576.hpp  rate_adaption_2x4_block_16384.hpp  rate_adaption_2x4_block_4096.hpp  rate_adaption_2x6_block_1572864.hpp  rate_adaption_2x6_block_24576.hpp  rate_adaption_2x6_block_6144.hpp
tests/: CMakeLists.txt  LDPC_code_for_testing_2048x6144.cscmat  fortest_autogen_ldpc_matrix_csc.hpp  fortest_autogen_rate_adaption.hpp  helpers_for_testing.hpp  look_at_executable_size.cpp  test_encoder.cpp  test_encoder_advanced.cpp  test_main.cpp  test_rate_adaptive_code.cpp  test_read_ldpc_from_files.cpp  test_read_scmat_format.cpp  test_reading_bincscjson_format_block_6144_proto_2x6_313422410401.bincsc.json
